added slider to change colors

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -10,3 +10,12 @@ button {
 #calcList {
     margin-top: 2%;
 }
+
+#ex1Slider .slider-selection {
+    background: #BABABA;
+}
+
+#sliderContainer {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
